; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/x86/extr_clk-pmc-atom.c_plt_reg_to_parent.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/x86/extr_clk-pmc-atom.c_plt_reg_to_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PMC_MASK_CLK_FREQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @plt_reg_to_parent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @plt_reg_to_parent(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @PMC_MASK_CLK_FREQ, align 4
  %6 = and i32 %4, %5
  switch i32 %6, label %7 [
    i32 128, label %8
    i32 129, label %9
  ]

7:                                                ; preds = %1
  br label %8

8:                                                ; preds = %1, %7
  store i32 0, i32* %2, align 4
  br label %10

9:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %10

10:                                               ; preds = %9, %8
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
